--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "chalk": "^5.3.0",
     "color": "^4.2.3",
+    "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
-    "https-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
     "node-fetch": "^3.3.2",
     "winston": "^3.17.0"
   }
